# Nociones-Clave-Ejercicios-Israel-Lara

./: CMakeLists.txt  Estudiante.cpp  Persona.h  README.md  funciones.cpp  funciones.h  main.cpp  main.h
Proyecto 1/: Estudiante.h  Persona.cpp  main.cpp  matematicas.cpp
Proyecto 2/: main.cpp
Proyecto1/: Persona.cpp  matematicas.h
Proyecto2/: nuevo.cpp  nuevo.h
